syntax = "proto3";

package playlist.v1;

option go_package = "github.com/MusicSocial/api-gateway/proto/playlist/v1;playlistpb";

service PlaylistService {
  // Создать плейлист
  rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse);
  
  // Получить плейлист по ID
  rpc GetPlaylist(GetPlaylistRequest) returns (GetPlaylistResponse);
  
  // Обновить плейлист
  rpc UpdatePlaylist(UpdatePlaylistRequest) returns (UpdatePlaylistResponse);
  
  // Удалить плейлист
  rpc DeletePlaylist(DeletePlaylistRequest) returns (DeletePlaylistResponse);
  
  // Получить плейлисты пользователя
  rpc GetUserPlaylists(GetUserPlaylistsRequest) returns (GetUserPlaylistsResponse);
  
  // Добавить трек в плейлист
  rpc AddTrackToPlaylist(AddTrackToPlaylistRequest) returns (AddTrackToPlaylistResponse);
  
  // Удалить трек из плейлиста
  rpc RemoveTrackFromPlaylist(RemoveTrackFromPlaylistRequest) returns (RemoveTrackFromPlaylistResponse);
  
  // Получить треки плейлиста
  rpc GetPlaylistTracks(GetPlaylistTracksRequest) returns (GetPlaylistTracksResponse);
}

// Запрос на создание плейлиста
message CreatePlaylistRequest {
  string user_id = 1;  // UUID пользователя
  string name = 2;     // Название плейлиста
  string description = 3;  // Описание (опционально)
  bool is_private = 4; // Приватный ли плейлист
}

// Ответ на создание плейлиста
message CreatePlaylistResponse {
  string playlist_id = 1;  // UUID плейлиста
}

// Запрос на получение плейлиста
message GetPlaylistRequest {
  string playlist_id = 1;  // UUID плейлиста
}

// Ответ с информацией о плейлисте
message GetPlaylistResponse {
  Playlist playlist = 1;
}

// Запрос на обновление плейлиста
message UpdatePlaylistRequest {
  string playlist_id = 1;
  string name = 2;
  string description = 3;
  bool is_private = 4;
}

// Ответ на обновление плейлиста
message UpdatePlaylistResponse {
  bool success = 1;
}

// Запрос на удаление плейлиста
message DeletePlaylistRequest {
  string playlist_id = 1;
  string user_id = 2;  // Для проверки прав доступа
}

// Ответ на удаление плейлиста
message DeletePlaylistResponse {
  bool success = 1;
}

// Запрос на получение плейлистов пользователя
message GetUserPlaylistsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// Ответ со списком плейлистов пользователя
message GetUserPlaylistsResponse {
  repeated Playlist playlists = 1;
  int32 total = 2;
}

// Запрос на добавление трека в плейлист
message AddTrackToPlaylistRequest {
  string playlist_id = 1;
  string track_id = 2;
  string user_id = 3;  // Для проверки прав доступа
}

// Ответ на добавление трека в плейлист
message AddTrackToPlaylistResponse {
  bool success = 1;
}

// Запрос на удаление трека из плейлиста
message RemoveTrackFromPlaylistRequest {
  string playlist_id = 1;
  string track_id = 2;
  string user_id = 3;  // Для проверки прав доступа
}

// Ответ на удаление трека из плейлиста
message RemoveTrackFromPlaylistResponse {
  bool success = 1;
}

// Запрос на получение треков плейлиста
message GetPlaylistTracksRequest {
  string playlist_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// Ответ со списком треков плейлиста
message GetPlaylistTracksResponse {
  repeated PlaylistTrack tracks = 1;
  int32 total = 2;
}

// Модель плейлиста
message Playlist {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  bool is_private = 5;
  string created_at = 6;
  string updated_at = 7;
  int32 tracks_count = 8;
}

// Модель трека в плейлисте
message PlaylistTrack {
  string track_id = 1;
  string playlist_id = 2;
  string added_at = 3;
  int32 position = 4;
}